# souffle-lint

./: .buildinfo  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.html  build.rs  categories.html  changelog.html  config.html  contributing.html  dev.html  genindex.html  index.html  install.html  objects.inv  rustfmt.toml  search.html  searchindex.js  shell.nix  usage.html  writing.html
.github/workflows/: ci.yml  release.yml
_sources/: build.rst.txt  categories.rst.txt  changelog.rst.txt  index.rst.txt  install.rst.txt  usage.rst.txt  writing.rst.txt
bench/: cclyzer++-v0.4.dl  ddisasm.dl
config/: default.yml  style.yml
doc/: build.rst  categories.rst  changelog.rst  conf.py  config.rst  contributing.rst  dev.rst  index.rst  install.rst  requirements.txt  usage.rst
scripts/: ci.sh
src/: cli.rs  config.rs  filter.rs  interactive.rs  lint.rs  main.rs  man.rs  parse.rs
test/: bad-config-no-queries.yml  config-ignore.dl  config-ignore.yml  depr-prag-legacy.dl  depr-rel-qual.dl  depr-type-decl.dl  error-dup-rel-decl.dl  error-dup-type-decl.dl  lit.cfg.py  simpl-binop-const.dl  simpl-binop-id.dl  simpl-call-cat.dl  simpl-call-intrin.dl  simpl-call-range.dl  simpl-con-comp.dl  simpl-con-const.dl  simpl-dup-conj.dl  simpl-dup-fact.dl  simpl-dup-rule.dl  simpl-neg-double.dl  simpl-rule-fact.dl  simpl-union-dup.dl  simpl-union-prim.dl  style-name-var.dl  style-symb-op.dl
