[package]
name = "souffle-lint"
description = "Linter for Soufflé Datalog"
version = "0.1.0"
keywords = ["linter", "souffle", "datalog"]
edition = "2021"
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/langston-barrett/souffle-lint"
repository = "https://github.com/langston-barrett/souffle-lint"

# https://nnethercote.github.io/perf-book/build-configuration.html
#
# LTO roughly doubles build time from ~9s to ~16s
[profile.release]
panic = "abort"
lto = "thin"

[dependencies]
anyhow = "1.0"
atty = "0.2"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tree-sitter = "0.20.9"
tree-sitter-souffle = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
